compiling_error.txt
C:\Users\lenovo\Desktop\All\Docs\Cracking Coding Interview\4.1.cpp:15:63: error: '>>' should be '> >' within a nested template argument list
 Graph :: Graph(int nEdges, int nVertices, list <pair <int, int>> edges){
                                                               ^
C:\Users\lenovo\Desktop\All\Docs\Cracking Coding Interview\4.1.cpp:4:1: error: new types may not be defined in a return type
 class Graph{
 ^
C:\Users\lenovo\Desktop\All\Docs\Cracking Coding Interview\4.1.cpp:4:1: note: (perhaps a semicolon is missing after the definition of 'Graph')
C:\Users\lenovo\Desktop\All\Docs\Cracking Coding Interview\4.1.cpp:15:71: error: return type specification for constructor invalid
 Graph :: Graph(int nEdges, int nVertices, list <pair <int, int>> edges){
                                                                       ^
C:\Users\lenovo\Desktop\All\Docs\Cracking Coding Interview\4.1.cpp: In constructor 'Graph::Graph(int, int, std::list<std::pair<int, int> >)':
C:\Users\lenovo\Desktop\All\Docs\Cracking Coding Interview\4.1.cpp:16:23: error: '>>' should be '> >' within a nested template argument list
   list <pair <int, int>> :: iterator it;
                       ^
C:\Users\lenovo\Desktop\All\Docs\Cracking Coding Interview\4.1.cpp: At global scope:
C:\Users\lenovo\Desktop\All\Docs\Cracking Coding Interview\4.1.cpp:57:12: error: 'Node' was not declared in this scope
 int height(Node *root){
            ^
C:\Users\lenovo\Desktop\All\Docs\Cracking Coding Interview\4.1.cpp:57:18: error: 'root' was not declared in this scope
 int height(Node *root){
                  ^
C:\Users\lenovo\Desktop\All\Docs\Cracking Coding Interview\4.1.cpp:57:23: error: expected ',' or ';' before '{' token
 int height(Node *root){
                       ^
C:\Users\lenovo\Desktop\All\Docs\Cracking Coding Interview\4.1.cpp:62:17: error: 'Node' was not declared in this scope
 bool isBalanced(Node *root){
                 ^
C:\Users\lenovo\Desktop\All\Docs\Cracking Coding Interview\4.1.cpp:62:23: error: 'root' was not declared in this scope
 bool isBalanced(Node *root){
                       ^
C:\Users\lenovo\Desktop\All\Docs\Cracking Coding Interview\4.1.cpp:62:28: error: expected ',' or ';' before '{' token
 bool isBalanced(Node *root){
                            ^
C:\Users\lenovo\Desktop\All\Docs\Cracking Coding Interview\4.1.cpp: In function 'int main()':
C:\Users\lenovo\Desktop\All\Docs\Cracking Coding Interview\4.1.cpp:72:22: error: '>>' should be '> >' within a nested template argument list
   list <pair<int, int>> ed;
                      ^
